hphp/test/slow/hack-arrays/callable.php.expectf
====================================================
int(1)
====================================================
int(2)
====================================================
int(3)
====================================================
int(4)
====================================================
dict(1) {
  [0]=>
  int(5)
}
====================================================
dict(1) {
  [0]=>
  int(6)
}
====================================================
int(7)
====================================================
int(8)
====================================================
int(9)
====================================================
int(10)
====================================================
dict(1) {
  [0]=>
  int(11)
}
====================================================
dict(1) {
  [0]=>
  int(12)
}
====================================================

Fatal error: Invalid callable (array) in %s/test/slow/hack-arrays/callable.php on line 9
====================================================

Warning: Invalid argument: function: not a valid callback array in %s/test/slow/hack-arrays/callable.php on line 10
NULL
====================================================

Warning: array_map() expects parameter 1 to be a valid callback in %s/test/slow/hack-arrays/callable.php on line 11
NULL